replace site.baseurl with {{ / | relative_url }}

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title:               mai1015
 tagline:             underdevelopment
 url:                 http://www.mai1015.com/
 paginate:            5
-baseurl:             "/"
+baseurl:             ""
 
 # Assets
 #
