--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
 # Custom vars
 version:             2.0.0
 github:
-  repo:              https://github.com/poole/poole
+  repo:              https://github.com/mai1015
 
 # Gems
 gems:
