--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ permalink:           pretty
 # Setup
 title:               mai1015
 tagline:             underdevelopment
-url:                 http://www.mai1015.com/
+url:                 https://www.mai1015.com/
 paginate:            5
 baseurl:             ""
 
