--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title:               mai1015
 tagline:             underdevelopment
 url:                 https://www.mai1015.com/
 paginate:            5
-baseurl:             ""
+baseurl:             "/"
 
 # Assets
 #
